# corbasim

./: CMakeLists.txt  README.md  TODO  bootstrap.sh  configure  corbasim.cfg.base
corbasim/: CMakeLists.txt  adapted.hpp  corba_adapted.hpp  corbasim.cmake  corbasim.hpp  corbasim_gui.cmake  corbasim_lua.cmake  corbasim_python.cmake  corbasim_qt.cmake  corbasim_qt_python.cmake  corbasim_qwt.cmake  corbasim_reflective_gui.cmake  corbasim_scripting.cmake  event.cpp  event.hpp  event_fwd.hpp  impl.hpp  mpl.hpp  omniorb4.hpp  serialization.hpp  tao.hpp  version.hpp  version.hpp.in
corbasim/app/: AppController.cpp  AppController.hpp  AppMainWindow.cpp  AppMainWindow.hpp  AppModel.cpp  AppModel.hpp  CMakeLists.txt  TriggerEngine.cpp  TriggerEngine.hpp  app.cmake  app.idl  main.cpp  test.cpp
corbasim/core/: archives.cpp  archives.hpp  callable.hpp  caller.hpp  caller_fwd.hpp  config.hpp  config.hpp.in  copy.hpp  core.cpp  event.cpp  event.hpp  event_fwd.hpp  event_notifier.cpp  event_notifier.hpp  export.hpp  factory.cpp  factory.hpp  factory_fwd.hpp  file_format_helper.cpp  file_format_helper.hpp  injector.hpp  inserter.hpp  ns_register.cpp  ns_register.hpp  range.hpp  reference_repository.cpp  reference_repository.hpp  reference_validator.cpp  reference_validator.hpp  reflective.cpp  reflective.hpp  reflective.ipp  reflective_fwd.hpp  reflective_primitive.ipp  request_serializer.cpp  request_serializer.hpp  servant.hpp
corbasim/cosnaming/: CMakeLists.txt  CosNaming_BindingIterator_reflective.cpp  CosNaming_NamingContextExt_reflective.cpp  CosNaming_NamingContext_reflective.cpp  Cosnaming.idl  CosnamingC.h  CosnamingS.h  Cosnaming_adapted.cpp  Cosnaming_adapted.hpp  Cosnaming_servant.hpp  Cosnaming_static.cmake
corbasim/deprecated/: auto_response.cpp  auto_response.hpp
corbasim/gui/: Application.cpp  Application.hpp  ClientMain.cpp  DumpTool.cpp  DumpTool.hpp  FileWatcher.cpp  FileWatcher.hpp  FilteredLogView.cpp  FilteredLogView.hpp  InputRequestProcessor.cpp  InputRequestProcessor.hpp  LogModel.cpp  LogModel.hpp  Model.cpp  Model.hpp  ModelNode.cpp  ModelNode.hpp  NSManager.cpp  NSManager.hpp  ObjrefWidget.cpp  ObjrefWidget.hpp  OperationForm.cpp  OperationForm.hpp  OperationParametersModel.cpp  OperationParametersModel.hpp  OperationSequence.cpp  OperationSequence.hpp  ParametersFromFilesTool.cpp  ParametersFromFilesTool.hpp  ParametersModel.cpp  ParametersModel.hpp  RecorderTool.hpp  ReflectiveGUI.cpp  ReflectiveGUI.hpp  ReflectiveScriptClass.cpp  ReflectiveScriptClass.hpp  RequestDialog.cpp  RequestDialog.hpp  ScriptEvaluator.cpp  ScriptEvaluator.hpp  (+41 more)
corbasim/json/: converter.hpp  helper.hpp  parser.hpp  reflective.cpp  reflective.hpp  writer.hpp
corbasim/lua/: interpreter.cpp  interpreter.hpp
corbasim/mpl/: for_each.hpp  list.hpp  vector.hpp  vector100.hpp  vector200.hpp  vector50.hpp  vectorX.hpp.pump
corbasim/python/: auto_response.cpp  auto_response.hpp  interpreter.cpp  interpreter.hpp  python_out_redirect.cpp  python_out_redirect.hpp
corbasim/qt/: CustomLayouts.cpp  CustomLayouts.hpp  FilterModel.cpp  FilterModel.hpp  FormWidget.cpp  FormWidget.hpp  Interpreter.cpp  Interpreter.hpp  LogModel.cpp  LogModel.hpp  LogTreeWidget.cpp  LogTreeWidget.hpp  LogWidget.cpp  LogWidget.hpp  MultiFileSelectionWidget.cpp  MultiFileSelectionWidget.hpp  MultiInputWidget.cpp  MultiInputWidget.hpp  ObjrefWidget.cpp  ObjrefWidget.hpp  OperationSequence.cpp  OperationSequence.hpp  ParametersModel.cpp  ParametersModel.hpp  PlotModel.cpp  PlotModel.hpp  PythonHighlighter.cpp  PythonHighlighter.hpp  RangedWidget.hpp  ReferenceFinder.cpp  ReferenceFinder.hpp  ReferenceModel.cpp  ReferenceModel.hpp  RequestDialog.cpp  RequestDialog.hpp  RequestNotifier.hpp  RequestProcessor.cpp  RequestProcessor.hpp  ScriptEditor.cpp  ScriptEditor.hpp  (+22 more)
corbasim/qwt/: PlotModel.cpp  PlotModel.hpp  PlotTool.cpp  PlotTool.hpp  ReflectivePlotTool.cpp  ReflectivePlotTool.hpp  SimplePlot.cpp  SimplePlot.hpp  export.hpp
corbasim/reflective_gui/: FilteredLogView.cpp  FilteredLogView.hpp  InputRequestProcessor.cpp  InputRequestProcessor.hpp  LogModel.cpp  LogModel.hpp  ModelNode.cpp  ModelNode.hpp  NewLogModel.cpp  NewLogModel.hpp  OperationSequence.cpp  OperationSequence.hpp  ReflectiveGUI.cpp  ReflectiveGUI.hpp  RequestDialog.cpp  RequestDialog.hpp  ScriptModel.cpp  ScriptModel.hpp  SimpleClient.cpp  SimpleClient.hpp  SimpleScriptEditor.cpp  SimpleScriptEditor.hpp  export.hpp  json.cpp  json.hpp  qvariant.cpp  qvariant.hpp  utils.cpp  utils.hpp
corbasim/scripting/: interpreter.cpp  interpreter.hpp  request_processor.cpp  request_processor.hpp
corbasim/xml/: handler.hpp  parse.hpp  parser_common.hpp
corbasim_app/: AboutDialog.cpp  AboutDialog.hpp  AppConfiguration.cpp  AppConfiguration.hpp  AppController.cpp  AppController.hpp  AppFileWatcher.cpp  AppFileWatcher.hpp  AppMainWindow.cpp  AppMainWindow.hpp  AppMainWindow.ui  AppModel.cpp  AppModel.hpp  CMakeLists.txt  CreateDialog.cpp  CreateDialog.hpp  DataDumper.cpp  DataDumper.hpp  IDLBuilder.cpp  IDLBuilder.hpp  NSBrowser.cpp  NSWatcher.cpp  NSWatcher.hpp  ObjrefView.cpp  ObjrefView.hpp  ServantView.cpp  ServantView.hpp  TriggerEngine.cpp  TriggerEngine.hpp  app.cmake  app.idl  app_adapted.hpp  app_servant.hpp  launcher.cpp  main.cpp  main_ui.cpp  test.cpp
corbasim_app/model/: Objref.cpp  Objref.hpp  ReferenceModel.cpp  ReferenceModel.hpp  Servant.cpp  Servant.hpp
corbasim_app/view/: CreateDialog.cpp  CreateDialog.hpp  Objref.cpp  Objref.hpp  Servant.cpp  Servant.hpp
corbasim_idl/: CMakeLists.txt  export.xml
examples/simple/: CMakeLists.txt  PlotModel.cpp  PlotModel.hpp  SimpleExample_Test_client.cpp  SimpleExample_Test_client_main.cpp  SimpleExample_Test_injector.cpp  SimpleExample_Test_lib.cpp  SimpleExample_Test_reflective.cpp  SimpleExample_Test_server.cpp  prueba.cpp  prueba_reflective.cpp  simple.cmake  simple.idl  simpleC.cpp  simpleC.h  simpleC.inl  simpleS.cpp  simpleS.h  simple_adapted.cpp  simple_adapted.hpp  simple_servant.hpp
examples/widgets/: CMakeLists.txt  (+9 more)
test/: CMakeLists.txt  archives.cpp  mpl_vector.cpp  reflective.cpp
(+314 files in other folders)
